# estudos-dev

Estudos/Exemplos_Python/Django/firstproject/: settings.py
exemplos_javascript/: ex1.js  package-lock.json  package.json
exemplos_portugol/: ex1.por  ex2.por
projetos/projeto1/: app.py  pyproject.toml
projetos/projeto2/: app.py  pyproject.toml
