[tool.poetry]
name = "simulador_de_dados"
version = "0.1.0"
description = "gerar numero aleatorio de 1 6"
authors = ["Lubeen <luan.silvapvh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
