[tool.poetry]
name = "chute_o_numero"
version = "0.1.0"
description = "O usuario ira tentar acertar o numero gerado"
authors = ["Lubeen <luan.silvapvh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
